--- a/Assets/CSS/Stylesheet_Aaron.css
+++ b/Assets/CSS/Stylesheet_Aaron.css
@@ -1,1 +1,74 @@
+body {
+  background-color: white;
+  margin: 0;
+  font-family: "roboto", sans-serif;
+}
+
+.robotics .container {
+  display: grid;
+  height: 100vh;
+  width: 100%;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+.robotics .container .content-box-1 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  background-color: #ececec;
+  padding-left: 20px;
+  padding-top: 10px;
+  text-align: left;
+  padding-right: 50px;
+}
+.robotics .container .content-box-1 p {
+  font-size: 1.4em;
+}
+.robotics .container .content-box-2 {
+  background-color: #464545;
+  grid-column: 2/4;
+  grid-row: 2/3;
+  color: #ececec;
+  padding-left: 50px;
+  padding-top: 10px;
+  text-align: right;
+  padding-right: 20px;
+}
+.robotics .container .content-box-2 p {
+  font-size: 1.4em;
+}
+.robotics .container .img-box-2 {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  background-image: url(../IMG/img_box-2.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.robotics .container .img-box-1 {
+  grid-column: 3/4;
+  grid-row: 1/2;
+  background-image: url(../IMG/img_box-1.jpg);
+  background-position: center;
+  background-size: cover;
+}
+.robotics .content-box {
+  height: 90vh;
+  width: 55%;
+  margin: auto;
+}
+.robotics .content-box h1 {
+  color: #464545;
+  font-size: 2.25em;
+  font-weight: 80;
+  margin-block-end: 1em;
+  border-bottom: 1px solid #464545;
+  position: relative;
+  right: 45vw;
+  text-align: right;
+  width: 100vw;
+  margin-top: 10%;
+}
+.robotics .content-box p {
+  font-size: 1.4em;
+}
+
 /*# sourceMappingURL=Stylesheet_Aaron.css.map */
